# Stroke-Prediction

./: .gitignore  Makefile  README.md  app.py  environment.yml  pyproject.toml  setup.cfg
analysis/: EDA.ipynb
analysis/analysis_src/: basic_data_inspection.py  bivariate_analysis.py  missing_values_analysis.py  multivariate_analysis.py  univariate_analysis.py
artifacts/: preprocessor.pkl
docs/: mkdocs.yml
docs/docs/: index.md
mlruns/0/: meta.yaml
src/: config.py  dataset.py  features.py  logging_config.py  plots.py  utils.py
src/Components/: data_ingestion.py  data_splitter.py  data_transformation.py  model_trainer.py
src/modeling/: predict_pipeline.py  train_pipeline.py
src/pipeline/: predict_pipeline.py  train_pipeline.py
templates/: home.html  index.html
